--- a/templates/index.mustache
+++ b/templates/index.mustache
@@ -13,9 +13,12 @@
 }}
 {{!
     @template local_coursereport/index
+
+    Context variables required for this template:
+    * name: the fullname of the user.
 }}
 
-<table class="table">
+<table class="table table-striped table-hover generaltable">
     <thead>
         <tr>
             <th scope="col">{{#str}} name, local_coursereport {{/str}}</th>
