--- a/templates/report.mustache
+++ b/templates/report.mustache
@@ -13,16 +13,21 @@
 }}
 {{!
     @template local_coursereport/report
+
+    Context variables required for this template:
+    * course: the fullname of the course.
+    * completion: the completion status of the course.
+    * timecomplete: the timecompleted of the course.
 }}
 
 <span class="py-3 float-right">
-    <a href="{{config.wwwroot}}/local/coursereport/index.php" class="btn btn-light">
+    <a href="{{config.wwwroot}}/local/coursereport/index.php" class="btn btn-secondary">
     {{#str}} back, local_coursereport {{/str}}</a>
 </span>
 
 <h3>{{name}}</h3>
 
-<table class="table">
+<table class="table table-striped table-hover generaltable">
     <thead>
         <tr>
             <th scope="col">{{#str}} course, local_coursereport {{/str}}</th>
